# masori

./: .gitignore  README.md  pyproject.toml
src/masori/: __main__.py  config.py
src/masori/db/: database.py
src/masori/ingest/: __init__.py  common.py  draftkings.py  fantasy.py  players.py  positions.py  seasons.py  teams.py
src/masori/pipeline/: __init__.py  draftkings.py  fantasy.py  pipeline.py  players.py  positions.py  seasons.py  teams.py
